last brawl project

--- a/templates/page1.html
+++ b/templates/page1.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<img id="open-wheel" src="/static/images/wheel.png" alt="Открыть рулетку" class="open-wheel-img">
+<img id="open-wheel" src="/static/images/wheel_2.png" alt="Открыть рулетку" class="open-wheel-img">
 
     <!-- Контейнер рулетки -->
     <div class="wheel-container" id="wheel-container">
@@ -24,7 +24,7 @@
 <p id="score"><span id="currentScore">0</span></p>
 <p id="nick">Максим</p>
 
-<img id="clickButton" src="/static/images/shelly_3.png" style="width: 330px;" onclick="alert('Кнопка нажата!');">
+<img id="clickButton" src="/static/images/shelly.png" style="width: 330px;" onclick="alert('Кнопка нажата!');">
 <br>
 <button id="autoClickerButton">Автокликер</button>
 
