--- a/static/style.css
+++ b/static/style.css
@@ -207,7 +207,7 @@ progress {
     position: fixed;
     bottom: 87px;
     left: 20px;
-    width: 10%;
+    width: 95%;
     height: 15px;
     border: none;
     background-color: #f3f3f3;
@@ -812,19 +812,10 @@ text-shadow: 1px 1px 2px rgba(0, 0, 0, 1.5); /* Тень текста */
 
 /* Страница топ */
 
-/* Основной контейнер для таблицы лидеров */
-.leaderboard-container {
-    width: 80%;
-    margin: 0 auto;
-    text-align: center;
-    padding: 20px;
-    background-color: #1f1f1f;
-    border-radius: 15px;
-    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
-}
 
 /* Заголовок страницы */
 .leaderboard-title {
+position: center
     color: white;
     font-size: 2.5em;
     margin-bottom: 20px;
@@ -914,6 +905,15 @@ text-shadow: 1px 1px 2px rgba(0, 0, 0, 1.5); /* Тень текста */
     margin-top: 20px; /* Отступ сверху */
 }
 
+.arrow {
+    position: fixed; /* Фиксируем элемент относительно окна браузера */
+    top: 340px; /* Отступ сверху */
+    right: 450px; /* Отступ справа */
+}
+.arrow img {
+    width: 70px; /* Уменьшаем ширину изображения стрелки */
+    height: auto; /* Автоматическая высота для сохранения пропорций */
+}
 /* Фоны*/
 
 .menu_3 {
