--- a/templates/page2.html
+++ b/templates/page2.html
@@ -12,13 +12,22 @@
     <p>вы и ваш друг получите бонусы</p>
 </div>
 
-<div class="friends_3">
-    <img src="/static/images/friends_3.png" width="320">
+<div class="invite-container">
+    <div class="coin-stack">
+        <img src="/static/images/coin.png" alt="Coins" class="coins">
+    </div>
+    <div class="invite-text">
+        <div class="title">Пригласить друга</div>
+        <div class="reward">
+            <img src="/static/images/coin.png" alt="Coin" class="coin-icon">
+            <span class="reward-amount">+5,000</span>
+        </div>
+    </div>
 </div>
+ <div class="link">
+      <div class="link_text">Копировать ссылку</div>
+    </div>
 
-<div class="friends_5">
-    <img src="/static/images/friends_4.png" width="320">
-</div>
 
 <div class="friends_4">
     <p>Список ваших друзей</p>
