--- a/templates/page3.html
+++ b/templates/page3.html
@@ -24,32 +24,47 @@
 
 <div class="box_1">
     <img src="/static/images/box_1.png" width="80" class="box1">
-    <span class="text_box1">Мегаящик</span>
+    <span class="text_box1">Сундук начала</span>
     <br> <!-- Перенос строки для разделения основного и дополнительного текста -->
-     <span class="text_box11">здесь вы можете выбить нового персонажа</span>
-
+    <span class="text_box11">Сундук, излучающий загадочный свет <br>Его содержимое связано с истоками магической вселенной</span>
+    <div class="coin_container">
+        <img src="/static/images/coin.png" width="20" alt="Монета" class="coin_icon"> <!-- Иконка монеты -->
+        <span class="coin_text">1000</span> <!-- Текст с количеством монет -->
+    </div>
 </div>
 
 
 <div class="box_2">
     <img src="/static/images/box_2.png" width="80" class="box2">
-    <span class="text_box2">Суперящик</span>
+    <span class="text_box2">Призрачный Ларец</span>
     <br> <!-- Перенос строки для разделения основного и дополнительного текста -->
-     <span class="text_box22">здесь вы можете выбить нового персонажа</span>
-</div>
+     <span class="text_box22">Окутан дымкой, этот ларец будто <br> существует на грани реальности и потустороннего мира</span>
+    <div class="coin_container">
+        <img src="/static/images/coin.png" width="20" alt="Монета" class="coin_icon"> <!-- Иконка монеты -->
+        <span class="coin_text">1000</span> <!-- Текст с количеством монет -->
+    </div>
 
+</div>
 <div class="box_3">
     <img src="/static/images/box_3.png" width="80" class="box3">
-    <span class="text_box3">Ультраящик</span>
+    <span class="text_box3">Ящик Звездного Света</span>
     <br> <!-- Перенос строки для разделения основного и дополнительного текста -->
-     <span class="text_box33">здесь вы можете выбить нового персонажа</span>
+     <span class="text_box33">Сияние этого ящика напоминает бескрайние галактики. Его открытие связано с загадками космоса</span>
+<div class="coin_container">
+        <img src="/static/images/coin.png" width="20" alt="Монета" class="coin_icon"> <!-- Иконка монеты -->
+        <span class="coin_text">1000</span> <!-- Текст с количеством монет -->
+    </div>
 </div>
 
 <div class="box_4">
     <img src="/static/images/box_4.png" width="80" class="box4">
-    <span class="text_box4">Омегаящик</span>
+    <span class="text_box4">Сундук Бездны</span>
     <br> <!-- Перенос строки для разделения основного и дополнительного текста -->
-     <span class="text_box44">здесь вы можете выбить нового персонажа</span>
+     <span class="text_box44">Самый редкий сундук, в глубине которого кроется опасная и могущественная сила</span>
+<div class="coin_container">
+        <img src="/static/images/coin.png" width="20" alt="Монета" class="coin_icon"> <!-- Иконка монеты -->
+        <span class="coin_text">1000</span> <!-- Текст с количеством монет -->
+    </div>
 </div>
 
 
