--- a/templates/page7.html
+++ b/templates/page7.html
@@ -8,6 +8,38 @@
 </head>
 <body>
 
+<div class="friends_4">
+    <p>Улучшения</p>
+</div>
+
+<div class="box_1">
+    <img src="/static/images/box_1.png" width="80" class="box1">
+    <span class="text_box1">Сундук начала</span>
+    <br> <!-- Перенос строки для разделения основного и дополнительного текста -->
+     <span class="text_box11">Сундук, излучающий загадочный свет. Его содержимое связано с истоками магической вселенной</span>
+</div>
+
+<div class="box_2">
+    <img src="/static/images/box_2.png" width="80" class="box2">
+    <span class="text_box2">Призрачный Ларец</span>
+    <br> <!-- Перенос строки для разделения основного и дополнительного текста -->
+     <span class="text_box22">Окутан дымкой, этот ларец будто существует на грани реальности и потустороннего мира</span>
+</div>
+
+<div class="box_3">
+    <img src="/static/images/box_3.png" width="80" class="box3">
+    <span class="text_box3">Ящик Звездного Света</span>
+    <br> <!-- Перенос строки для разделения основного и дополнительного текста -->
+     <span class="text_box33">Сияние этого ящика напоминает бескрайние галактики. Его открытие связано с загадками космоса</span>
+</div>
+
+<div class="box_4">
+    <img src="/static/images/box_4.png" width="80" class="box4">
+    <span class="text_box4">Сундук Бездны</span>
+    <br> <!-- Перенос строки для разделения основного и дополнительного текста -->
+     <span class="text_box44">Самый редкий сундук, в глубине которого кроется опасная и могущественная сила</span>
+</div>
+
 
 
 <div class="menu_p3">
@@ -21,65 +53,6 @@
         <img src="/static/images/button_menu_3.png" width="110" alt="Image 3" class="image">
     </a>
 </div>
-
-<!--<button onclick="changeBackgroundImage('theme_2.png')">Сменить фон на theme_2.png</button>-->
-<!--<button onclick="changeBackgroundImage('theme_3.png')">Сменить фон на theme_3.png</button>-->
-<!--<button onclick="changeBackgroundImage('theme_4.png')">Сменить фон на theme_4.png</button>-->
-<!--<button onclick="changeBackgroundImage('theme_5.png')">Сменить фон на theme_5.png</button>-->
-<!--<button onclick="changeBackgroundImage('theme_6.png')">Сменить фон на theme_6.png</button>-->
-<!--<button onclick="changeBackgroundImage('theme_7.png')">Сменить фон на theme_7.png</button>-->
-<!--<button onclick="changeBackgroundImage('theme_8.png')">Сменить фон на theme_8.png</button>-->
-<!--<button onclick="changeBackgroundImage('theme_9.png')">Сменить фон на theme_9.png</button>-->
-<!--<button onclick="changeBackgroundImage('theme_10.png')">Сменить фон на theme_10.png</button>-->
-<!--<button onclick="resetBackground()">Сбросить фон на стандартный</button>-->
-
-
-<div class="menu_3">
-        <div class="menu-item_3" onclick="changeBackgroundImage('brawl_stars_lobby.png')">
-            <img src="/static/images/brawl_stars_lobby.png" alt="Обычные" class="menu-icon_3">
-            Стандартный
-        </div>
-        <div class="menu-item_3" onclick="changeBackgroundImage('theme_2.png')">
-            <img src="/static/images/theme_2.png" alt="Редкие" class="menu-icon_3">
-            Редкий
-        </div>
-        <div class="menu-item_3" onclick="changeBackgroundImage('theme_3.png')">
-            <img src="/static/images/theme_3.png" alt="Премиум" class="menu-icon_3">
-            Премиум
-        </div>
-         <div class="menu-item_3" onclick="changeBackgroundImage('theme_4.png')">
-            <img src="/static/images/theme_4.png" alt="Премиум" class="menu-icon_3">
-            Премиум
-        </div>
-        <div class="menu-item_3" onclick="changeBackgroundImage('theme_5.png')">
-            <img src="/static/images/theme_5.png" alt="Премиум" class="menu-icon_3">
-            Премиум
-        </div>
-    </div>
-
-<div class="menu_4">
-        <div class="menu-item_4" onclick="changeBackgroundImage('theme_6.png')">
-            <img src="/static/images/theme_6.png" alt="Обычные" class="menu-icon_4">
-            Эксклюзив
-        </div>
-        <div class="menu-item_4" onclick="changeBackgroundImage('theme_7.png')">
-            <img src="/static/images/theme_7.png" alt="Редкие" class="menu-icon_4">
-            Эксклюзив
-        </div>
-        <div class="menu-item_4" onclick="changeBackgroundImage('theme_8.png')">
-            <img src="/static/images/theme_8.png" alt="Премиум" class="menu-icon_4">
-            Эксклюзив
-        </div>
-         <div class="menu-item_4" onclick="changeBackgroundImage('theme_9.png')">
-            <img src="/static/images/theme_9.png" alt="Премиум" class="menu-icon_4">
-            Эксклюзив
-        </div>
-        <div class="menu-item_4" onclick="changeBackgroundImage('theme_10.png')">
-            <img src="/static/images/theme_10.png" alt="Премиум" class="menu-icon_4">
-            Эксклюзив
-        </div>
-    </div>
-
 
 
     <script src="{{ url_for('static', filename='script_theme.js') }}"></script>
