--- a/templates/page2.html
+++ b/templates/page2.html
@@ -5,7 +5,7 @@
     <title>Друзья</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
-<body>
+<body class="friends-page"> <!-- Добавлен класс friends-page -->
 
 <div class="friends_6">
     <h1>Пригласите друзей</h1>
@@ -29,7 +29,7 @@
     </div>
 
 
-<div class="friends_4">
+<div class="up_text">
     <p>Список ваших друзей</p>
 </div>
 
